OrganizationInvitation code refactor, added AccessDenied status and frontend handling. Extended response from /me endpoint by adding current users organizations
