# src/Api/EnterpriseKnowledgeHub.Contracts/Enums/OrganizationRole.cs
@@ -1,0 +1,10 @@
+﻿namespace EnterpriseKnowledgeHub.Contracts.Enums
+{
+    public enum OrganizationRole
+    {
+        OrganizationOwner,
+        OrganizationAdmin,
+        KnowledgeManager,
+        Employee
+    }
+}
